--- a/MENU.html
+++ b/MENU.html
@@ -10,7 +10,7 @@
 <body>
 <div id="layout-content">
 <p>Sadaf's	
-Home									<a href="default.html">default.html</a>
+Home									<a href="index.html">default.html</a>
 Publications							<a href="publications.html">publications.html</a>
 Experience							<a href="experience.html">experience.html</a>
 Talks							                 <a href="Talks.html">Talks.html</a>	</p>
