--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Sadaf's</div>
-<div class="menu-item"><a href="default.html">Home</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
 <div class="menu-item"><a href="experience.html">Experience</a></div>
 <div class="menu-item"><a href="Talks.html">Talks</a></div>
