--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Sweden <br />
 <div class="blockcontent">
 <h2>Updates</h2>
 <ul>
-<li><p><b>March, 2025</b>: Our paper <a href="https://ieeexplore.ieee.org/document/10937744" target=&ldquo;blank&rdquo;>Simultaneous Information and Energy Transmission with Short Packets and Finite Constellations</a> has been accepted for publication in IEEE Transactions on Communications. Joint work with Samir M. Perlaza, H. Vincent Poor, Eitan Altman and Mikael Skoglund.
+<li><p><b>March, 2025</b>: Our paper <a href="https://ieeexplore.ieee.org/document/10937744" target=&ldquo;blank&rdquo;>Simultaneous Information and Energy Transmission with Short Packets and Finite Constellations</a> has been accepted for publication in IEEE Transactions on Communications. Joint work with Samir M. Perlaza, H. Vincent Poor, and Mikael Skoglund.
 </p>
 </li>
 <li><p><b>Jan, 2025</b>: Joined <b>Ericsson Research</b>, Stockholm, Sweden as an Experienced researcher in RA Networks.
@@ -93,7 +93,7 @@ Sweden <br />
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-28 11:46:54 CET, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-28 13:15:31 CET, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
